# dadascribe-api-python

./: .gitignore  LICENSE  README.md  pyproject.toml  run_tests.sh
.github/workflows/: publish.yml
src/dadascribe/: __init__.py  __main__.py  cli.py  internal_globals.py  main_api.py  request_utils.py  wrapper.py
tests/: test_internal_globals.py  test_request_utils.py  test_wrapper.py
