[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dadascribe"
version = "0.0.1"
authors = [
    { name = "PatzEdi", email = "patzedigithub@gmail.com" },
    { name = "Fabrizio Ferrari", email = "fabriziovsm@gmail.com" }
]
description = "Python wrapper for the DaDaScribe API"
readme = "README.md"
keywords = ["transcriptions", "diarization", "whisper"]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license="MIT"
license-files=["LICENSE"]

dependencies = ["requests"]

[project.scripts]
dadascribe = "dadascribe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dadascribe"]

[project.urls]
"Homepage" = "https://api.dadascribe.com/"
"Repository" = "https://github.com/PatzEdi/dadascribe-api-python/"
"Bug Tracker" = "https://github.com/PatzEdi/dadascribe-api-python/issues"